# TensorRT-LLM

./: .gitignore  pyproject.toml  requirements.txt  slurm-4938376.out  slurm-4938697.out  slurm-4939713.out
cpp/tensorrt_llm/batch_manager/: CMakeLists.txt  kvCacheManager.cpp
docs/source/models/: supported-models.md
examples/scaffolding/contrib/mcp/agent_tools/: .env.example  README.md  pyproject.toml  server.py
examples/scaffolding/contrib/mcp/agent_tools/tests/: test_python_run.py  test_scholar.py  test_search.py  test_visit.py
examples/scaffolding/contrib/mcp/agent_tools/tools/: __init__.py  python_run.py  scholar.py  search.py  visit.py
examples/scaffolding/evaluation/: pyproject.toml  run_browsecomp.py  run_swebench.py
examples/scaffolding/evaluation/datasets/: browsecomp_benchmark.json  frames_benchmark.json  mind2web_benchmark.json  webvoyager_benchmark.json
examples/scaffolding/evaluation/gateway/: README.md  __init__.py  agent_eval_gateway.py  preprocessors.py  types.py
examples/scaffolding/evaluation/log/2026-03-13-12-10-48/2026-03-13-12-10-48/: reports.txt  tool_calls.txt
examples/scaffolding/evaluation/log/2026-03-13-12-24-54/2026-03-13-12-24-54/: reports.txt  tool_calls.txt
examples/scaffolding/evaluation/logs/: browsecomp_results.json
examples/scaffolding/evaluation/mcp_tools/: __init__.py  web_search.py
examples/scaffolding/evaluation/mcp_tools/swebench/: __init__.py  impl.py  state.py
examples/scaffolding/evaluation/servers/: __init__.py  launch_mcp_server.py  stdio_mcp_worker.py  swebench_server.py
examples/scaffolding/evaluation/servers/dataset_servers/: __init__.py  browsecomp_server.py  mind2web_server.py  registry.py  webvoyager_server.py
tensorrt_llm/_torch/: model_config.py
tensorrt_llm/_torch/attention_backend/: inkling_triton.py
tensorrt_llm/_torch/configs/: __init__.py  inkling.py
tensorrt_llm/_torch/distributed/: ops.py
tensorrt_llm/commands/: serve.py
tensorrt_llm/evaluate/: lm_eval.py  post_processing.py
tensorrt_llm/executor/: base_worker.py
tensorrt_llm/llmapi/: __init__.py  llm.py  llm_args.py  llm_utils.py  reasoning_parser.py
tensorrt_llm/scaffolding/: task.py
tensorrt_llm/scaffolding/contrib/HeavyThinking/mcp/: .env  README.md  pyproject.toml  tool_registration.py
tensorrt_llm/scaffolding/contrib/HeavyThinking/mcp/tools/: python_run.py  visit.py
tensorrt_llm/serve/: openai_protocol.py  openai_server.py
(+176 files in other folders)
